--- a/PhotoSel/packages.config
+++ b/PhotoSel/packages.config
@@ -6,7 +6,6 @@
   <package id="MetadataExtractor" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
-  <package id="NGettext" version="0.6.3" targetFramework="net461" />
-  <package id="NGettext.Wpf" version="1.0.17-alpha" targetFramework="net461" />
+  <package id="PrettyBin" version="1.1.0" targetFramework="net461" />
   <package id="XmpCore" version="5.1.3.1" targetFramework="net461" />
 </packages>
